# BotTrading

./: .env.example  ARCHITECTURE.md  Dockerfile  IMPROVEMENTS_V4.md  INTEGRATION_GUIDE.md  RAILWAY_VOLUME.md  README.md  ai_rate_limiter.py  ai_trader_patch.py  backtest_proposed.py  bot_state.py  config.py  conftest.py  data_enricher.py  exchange.py  indicators.py  main.py  market_context.py  nixpacks.toml  optimizer.py  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt  risk.py  signals.py  strategy_patch.py  telegram.py  tg_commands.py  trade_logger.py  webhook.py  weights.json  ws_feed.py
.github/workflows/: backtest.yml  tests.yml
bot/: __init__.py  ai_filter.py  ai_trader.py  auto_backtest.py  backtest_scheduler.py  backtester.py  balance_service.py  correlation_filter.py  correlation_guard.py  daily_drawdown.py  data_enricher.py  decision_engine.py  enriched_filter.py  execution_engine.py  global_risk.py  indicators.py  kelly_sizer.py  kill_switch.py  logger.py  market_regime.py  market_snapshot.py  microstructure.py  notifier.py  ohlcv_cache.py  pair_scanner.py  position_manager.py  position_timeout.py  pretrade_risk.py  reentry_guard.py  risk.py  sentiment_gate.py  session_filter.py  session_vwap.py  shadow_mode.py  signal_cooldown.py  signal_engine.py  signal_engine_evaluate_patch.py  signal_memory.py  signal_persistence.py  state.py  (+10 more)
bot/ai/: __init__.py
bot/analysis/: __init__.py
bot/core/: __init__.py  bingx_client.py  decision_engine.py  hl_client.py  http_client.py  okx_client.py  (+2 more)
patches/: kill_switch_patch.md  main_patch.md  position_manager_patch.md  signal_engine_patch.md  trading_loop_restore_patch.md  webhook_patch.md
scripts/: recover_tpsl.py
tests/: test_hl_http.py  test_indicators.py  test_kelly_sizer.py  test_kill_switch.py  test_ohlcv_provider.py  test_order_executor.py  test_position_manager.py  test_position_sync.py  test_session_filter.py  test_signal_engine.py  test_trader_helpers.py  test_trailing_sl.py
(+13 files in other folders)
